[package]
name = "image-rider-fat"
version = "0.3.0"
edition = "2021"
authors = ["Joshua Gerrish <jgerrish@gmail.com>"]
description = "Rust nom parser to read FAT file systems"
keywords = ["fat", "dos", "filesystem", "cli", "nom"]
readme = "README.md"
repository = "https://github.com/jgerrish/image-rider-fat"
homepage = "https://github.com/jgerrish/image-rider-fat"
license = "MIT"

[dependencies]
config = "0.13"
unicode-width = "0.1"
clap = { version = "3.1", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
i18n-embed = { version = "0.13", features = ["fluent-system", "desktop-requester"] }
rust-embed = "6.3"
toml = "0.5"
insta = "1.13"
nom = "7.1"
fat-date-time = "0.1"
time = "0.3"

[dev-dependencies]
pretty_assertions = "1.1"
# criterion = "0.3"
