[package]
name = "image-rider-fat"
version = "0.5.0"
edition = "2021"
authors = ["Joshua Gerrish <jgerrish@gmail.com>"]
description = "Rust nom parser to read FAT file systems"
keywords = ["fat", "dos", "filesystem", "cli", "nom"]
readme = "README.md"
repository = "https://github.com/jgerrish/image-rider-fat"
homepage = "https://github.com/jgerrish/image-rider-fat"
license = "MIT"

[dependencies]
config = "0.13"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
toml = "0.5"
nom = "7.1"
fat-date-time = "0.1"
time = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"
