[package]
name = "image-rider-fat"
version = "0.5.3"
edition = "2021"
authors = ["Joshua Gerrish <jgerrish@gmail.com>"]
description = "Rust nom parser to read FAT file systems"
keywords = ["fat", "dos", "filesystem", "cli", "nom"]
readme = "README.md"
repository = "https://github.com/jgerrish/image-rider-fat"
homepage = "https://github.com/jgerrish/image-rider-fat"
license = "MIT"

[dependencies]
config = "0.14"
# Clap 4.5 requires rustc 1.74 or newer
# While it's good practice to keep your toolchain up-to-date
# I understand in some environments developer tooling teams need to
# thoroughly test toolchain releases for use in production.
# I hope this change to < 4.5 makes some lives easier and no 4.4 or
# rustc bugs pop up.
# Just a couple minutes saved.  It's swell.
clap = { version = "4.4, < 4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
toml = "0.8"
nom = "7.1"
fat-date-time = "0.1"
time = "0.3"

[dev-dependencies]
pretty_assertions = "1.4"
